vpc/Route-table/Route-table.tf
# ROUTE TABLE

# public
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id =  aws_internet_gateway.main.id
  }

  tags = {
    Name = "public"
  }
}

# private
resource "aws_route_table" "private1" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id =  aws_nat_gateway.ng1.id
  }
  tags = {
    Name = "private1"
  }
}

resource "aws_route_table" "private2" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id =  aws_nat_gateway.ng2.id
  }
  tags = {
    Name = "private2"
  }
}
